gitlab/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
  namespace: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab # has to match .spec.template.metadata.labels
  serviceName: "gitlab-svc"
  replicas: 1 # by default is 1
  template:
    metadata:
      # annotations:
      #   container.apparmor.security.beta.kubernetes.io/gitlab: localhost/nfs-mount-container
      labels:
        app: gitlab # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 0
        # runAsGroup: 1000
        fsGroup: 0
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:15.8.1-ce.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-web
              containerPort: 80
            - name: http-pages
              containerPort: 8090
            - name: tcp-ssh
              containerPort: 32222
            - name: http-reg
              containerPort: 5005
          securityContext:
            privileged: true
            # capabilities:
            #   add: 
            #     - SYS_ADMIN
          # livenessProbe:
          #   httpGet:
          #     path: /help
          #     port: http
          #   # This pod takes a very long time to start up. Be cautious when
          #   # lowering this value to avoid Pod death during startup.
          #   initialDelaySeconds: 200
          #   timeoutSeconds: 15
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 10
          # readinessProbe:
          #   httpGet:
          #     path: /help
          #     port: http-web
          #   initialDelaySeconds: 60
          #   timeoutSeconds: 1
          #   periodSeconds: 10
          #   successThreshold: 1
          #   failureThreshold: 3
          # resources:
          #   limits:
          #     memory: 3000Mi
          #     # cpu: 800m
          #   requests:
          #     memory: 2000Mi
          #     # cpu: 600m
          volumeMounts:
            - name: reg-cert
              mountPath: /reg-auth-cert
            - name: gitlab-etc
              mountPath: /etc/gitlab
            - name: gitlab-git-data
              mountPath: /gitlab-data/git-data
            - name: gitlab-uploads-data
              mountPath: /gitlab-data/uploads
            - name: gitlab-shared-data
              mountPath: /gitlab-data/shared
            - name: gitlab-builds-data
              mountPath: /gitlab-data/builds
      volumes:
        - name: reg-cert
          secret:
            secretName: gitlab-reg-auth
        - name: gitlab-etc
          persistentVolumeClaim:
            claimName: gitlab-etc-pvc
        - name: gitlab-git-data
          persistentVolumeClaim:
            claimName: gitlab-git-data-pvc
        - name: gitlab-uploads-data
          persistentVolumeClaim:
            claimName: gitlab-uploads-data-pvc
        - name: gitlab-shared-data
          persistentVolumeClaim:
            claimName: gitlab-shared-data-pvc
        - name: gitlab-builds-data
          persistentVolumeClaim:
            claimName: gitlab-builds-data-pvc
