gitlab/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - name: http-web
      protocol: "TCP"
      port: 80
      targetPort: 80
    - name: http-pages
      protocol: "TCP"
      port: 8090
      targetPort: 8090
    - name: http-reg
      protocol: "TCP"
      port: 5005
      targetPort: 5005
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh-svc
  namespace: gitlab
  labels:
    app: gitlab-ssh
spec:
  selector:
    app: gitlab
  ports:
    - name: ssh
      protocol: "TCP"
      port: 32222
      targetPort: 22
  type: ClusterIP
